Darken danger state colour by one step to ensure contrast when in table hover state

--- a/stylesheets/_component.status.scss
+++ b/stylesheets/_component.status.scss
@@ -44,8 +44,4 @@
     &.is-offline {
         color: color(danger);
     }
-
-    span {
-        color: color(text);
-    }
 }
