--- a/stylesheets/_palette.base.scss
+++ b/stylesheets/_palette.base.scss
@@ -100,10 +100,10 @@ $palette-states: (
         dark:  darken(#eaa96a, 35)
     ),
     danger: (
-        base:  #c84d40,
-        alt:   pick_best_color(#c84d40, (#fff, #000)),
-        light: lighten(#c84d40, 40),
-        dark:  darken(#c84d40, 5)
+        base:  #c74a3d,
+        alt:   pick_best_color(#c74a3d, (#fff, #000)),
+        light: lighten(#c74a3d, 40),
+        dark:  darken(#c74a3d, 5)
     ),
     info: (
         base:  map-get(map-get($palette-branding, jadu-blue), pale),
